src/test/deca/syntax/invalid/synt/field_decl_outside_class.deca
/*
    Description: Declaration d'un attribut en dehors d'une classe

    Résultat : erreur syntaxique deca:6:0
*/
int x;
// @expected_output deca:6:0
